fix: removes spec files from build output and adds parallel compilation

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "prepare": "yarn build",
     "build:cjs": "tsc",
     "build:es": "tsc -m esNext --outDir esm",
-    "build": "yarn build:cjs && yarn build:es",
+    "build": "concurrently --kill-others-on-fail \"npm:build:*\"",
     "test": "jest",
     "test:watch": "jest --watch",
     "commit": "git-cz",
@@ -57,6 +57,7 @@
     "@types/jest": "^24.0.17",
     "@types/node": "^12.7.1",
     "commitizen": "^4.0.3",
+    "concurrently": "^4.1.2",
     "cz-conventional-changelog": "3.0.2",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
