feat(jest): adds -o to jest to speed up tests on only modified files

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build:cjs": "tsc",
     "build:es": "tsc -m esNext --outDir esm",
     "build": "concurrently --kill-others-on-fail \"npm:build:*\"",
-    "test": "jest",
+    "test": "jest -o",
+    "test:all": "jest",
     "test:watch": "jest --watch",
     "commit": "git-cz",
     "lint": "tslint 'src/**/*.{ts,tsx}' -t verbose",
